--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -55,7 +55,8 @@
             <div class='col-12'>
               <div class='d-flex justify-content-between'>
                 <h1>Questions</h1>
-                <mat-slide-toggle color='primary' [(ngModel)]='showSentiment'  labelPosition='before'><h4 class='m-0 text-muted mr-2'>Scoring</h4></mat-slide-toggle>
+                <mat-slide-toggle color='primary' [(ngModel)]='showSentiment' labelPosition='before'><h4
+                  class='m-0 text-muted mr-2'>Scoring</h4></mat-slide-toggle>
               </div>
             </div>
           </div>
@@ -109,12 +110,133 @@
           </div>
         </mat-card>
       </div>
+
+      <ng-template>
+        <div class='col-lg-7'>
+          <mat-card>
+            <div class='row  '>
+              <div class='col-12'>
+                <div class='d-flex justify-content-between'>
+                  <h1>Questions 1</h1>
+                  <div class='row m-0' *ngIf='showSentiment'>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
+                      <h2 class='m-0 icon--success'>-3</h2>
+                    </div>
+                    <div class='d-flex sentiment'>
+                      <mat-icon color='primary' class='mr-3 icon--error'>sentiment_very_dissatisfied</mat-icon>
+                      <h2 class='m-0 icon--error'>-2</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class='row  mt-3'>
+              <div class='col-12'>
+                <mat-form-field class='w-100'>
+                  <mat-label>Questionnaire Name</mat-label>
+                  <input matInput autocomplete='no' type='text' required>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
+                <mat-form-field class='w-100' appearance='fill'>
+                  <mat-label>Type</mat-label>
+                  <mat-select>
+                    <mat-option value='one'>Multiple choice</mat-option>
+                    <mat-option value='two'>Image Select</mat-option>
+                    <mat-option value='two'>Yes/no</mat-option>
+                    <mat-option value='two'>Slider</mat-option>
+                    <mat-option value='two'>Vertical Select</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
+                  scoring</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mt-4 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Questions</mat-label>
+                    <input matInput autocomplete='no' type='text' required>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0 mb-2'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Description</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Why are we
+                  asking ?</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row m-0  mt-4 mb-2'>
+                  <mat-form-field class='w-100' *ngIf='showField'>
+                    <mat-label>Why are we asking</mat-label>
+                    <textarea matInput
+                              placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='col-12'>
+                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
+                  class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
+              </div>
+              <div class='col-12'>
+                <div class='row mt-4 mb-2'>
+                  <div class='col-3'><p class='text-muted'>POINTS</p></div>
+                  <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <div class='row  mb-2'>
+                  <div class='col-3'>
+                    <mat-form-field class='w-100'>
+                      <input matInput autocomplete='no' type='text' required>
+                    </mat-form-field>
+                  </div>
+                  <div class='col-9'>
+
+                    <mat-form-field class='w-100'>
+                      <mat-label>Answer 1</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row  mb-2'>
+                  <div class='offset-3'>
+                  </div>
+                  <div class='col-9' *ngIf='showIcon'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Font Awesome Icon 6 Code</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row'>
+                <button mat-button>ADD ANSWER</button>
+              </div>
+            </div>
+          </mat-card>
+        </div>
+      </ng-template>
       <div class='col-lg-7'>
         <mat-card>
           <div class='row  '>
             <div class='col-12'>
               <div class='d-flex justify-content-between'>
-                <h1>Questions 1</h1>
+                <h1>Questions 2</h1>
                 <div class='row m-0' *ngIf='showSentiment'>
                   <div class='d-flex sentiment'>
                     <mat-icon color='primary' class='mr-3 icon--success'>sentiment_satisfied_alt</mat-icon>
@@ -131,56 +253,41 @@
           <mat-divider></mat-divider>
           <div class='row  mt-3'>
             <div class='col-12'>
-              <mat-form-field class='w-100'>
-                <mat-label>Questionnaire Name</mat-label>
-                <input matInput autocomplete='no' type='text' required>
-              </mat-form-field>
-            </div>
-            <div class='col-12'>
               <mat-form-field class='w-100' appearance='fill'>
                 <mat-label>Type</mat-label>
                 <mat-select>
                   <mat-option value='one'>Multiple choice</mat-option>
+                  <mat-option value='two'>Image Select</mat-option>
+                  <mat-option value='two'>Yes/no</mat-option>
                   <mat-option value='two'>Slider</mat-option>
+                  <mat-option value='two'>Vertical Select</mat-option>
                 </mat-select>
               </mat-form-field>
             </div>
             <div class='col-12'>
-              <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From scoring</h4></mat-checkbox>
-            </div>
-            <div class='col-12'>
-              <div class='row m-0 mt-4 mb-2'>
-              <mat-form-field class='w-100'>
-                <mat-label>Questions</mat-label>
-                <input matInput autocomplete='no' type='text' required>
-              </mat-form-field>
-              </div>
-            </div>
-            <div class='col-12'>
-              <div class='row m-0 mb-2'>
+              <div class='row m-0  mb-2'>
                 <mat-form-field class='w-100'>
-                  <mat-label>Description</mat-label>
-                  <textarea matInput placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "></textarea>
+                  <mat-label>Questions</mat-label>
+                  <input matInput autocomplete='no' type='text' required>
                 </mat-form-field>
               </div>
             </div>
             <div class='col-12'>
-              <mat-checkbox class='example-margin mt-2' [(ngModel)]="showField"  color='primary'><h4 class='text-muted m-0  ml-2'>Why are we
+              <mat-checkbox class='example-margin mt-2' [(ngModel)]='showField' color='primary'><h4
+                class='text-muted m-0  ml-2'>Why are we
                 asking ?</h4></mat-checkbox>
             </div>
             <div class='col-12'>
               <div class='row m-0  mt-4 mb-2'>
                 <mat-form-field class='w-100' *ngIf='showField'>
                   <mat-label>Why are we asking</mat-label>
-                  <textarea matInput placeholder="Lorem Ipsum is simply dummy text of the printing and typesetting industry. "></textarea>
+                  <textarea matInput
+                            placeholder='Lorem Ipsum is simply dummy text of the printing and typesetting industry. '></textarea>
                 </mat-form-field>
               </div>
             </div>
             <div class='col-12'>
-              <mat-checkbox class='example-margin mt-2' [(ngModel)]="showIcon"   color='primary'><h4 class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
-            </div>
-            <div class='col-12'>
-              <div class='row mt-4 mb-2'>
+              <div class='row mt-2 mb-2'>
                 <div class='col-3'><p class='text-muted'>POINTS</p></div>
                 <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
               </div>
@@ -189,24 +296,73 @@
               <div class='row  mb-2'>
                 <div class='col-3'>
                   <mat-form-field class='w-100'>
-                    <input matInput autocomplete='no' type='text' required>
+                    <input matInput autocomplete='no' value='0' type='text' required>
                   </mat-form-field>
                 </div>
                 <div class='col-9'>
-
                   <mat-form-field class='w-100'>
                     <mat-label>Answer 1</mat-label>
-                    <input matInput autocomplete='no' type='text' >
+                    <input matInput autocomplete='no' placeholder='10% of my diet' type='text'>
                   </mat-form-field>
                 </div>
               </div>
+            </div>
+            <div class='col-12'>
               <div class='row  mb-2'>
-                <div class='offset-3'>
-                </div>
-                <div class='col-9' *ngIf='showIcon'>
+                <div class='col-3'>
                   <mat-form-field class='w-100'>
-                    <mat-label>Font Awesome Icon 6 Code</mat-label>
-                    <input matInput autocomplete='no' type='text' >
+                    <input matInput autocomplete='no' value='1' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Answer 2</mat-label>
+                    <input matInput autocomplete='no' placeholder='20% of my diet' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row  mb-2'>
+                <div class='col-3'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' value='2' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Answer 3</mat-label>
+                    <input matInput autocomplete='no' placeholder='30% of my diet' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row  mb-2'>
+                <div class='col-3'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' value='3' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Answer 4</mat-label>
+                    <input matInput autocomplete='no' placeholder='40% of my diet' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+            <div class='col-12'>
+              <div class='row  mb-2'>
+                <div class='col-3'>
+                  <mat-form-field class='w-100'>
+                    <input matInput autocomplete='no' value='4' type='text' required>
+                  </mat-form-field>
+                </div>
+                <div class='col-9'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Answer 5</mat-label>
+                    <input matInput autocomplete='no' placeholder='50% of my diet' type='text'>
                   </mat-form-field>
                 </div>
               </div>
@@ -214,7 +370,7 @@
           </div>
           <div class='col-12'>
             <div class='row'>
-             <button mat-button>ADD ANSWER</button>
+              <button mat-button>ADD ANSWER</button>
             </div>
           </div>
         </mat-card>
@@ -222,4 +378,6 @@
     </div>
   </div>
 </div>
+
+
 
