--- a/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
+++ b/libs/questionnaire/create-questionnaire/src/lib/create-questionnaire.component.html
@@ -134,12 +134,6 @@
             <mat-divider></mat-divider>
             <div class='row  mt-3'>
               <div class='col-12'>
-                <mat-form-field class='w-100'>
-                  <mat-label>Questionnaire Name</mat-label>
-                  <input matInput autocomplete='no' type='text' required>
-                </mat-form-field>
-              </div>
-              <div class='col-12'>
                 <mat-form-field class='w-100' appearance='fill'>
                   <mat-label>Type</mat-label>
                   <mat-select>
@@ -152,11 +146,7 @@
                 </mat-form-field>
               </div>
               <div class='col-12'>
-                <mat-checkbox class='example-margin mt-2' color='primary'><h4 class='text-muted m-0  ml-2'> Omit From
-                  scoring</h4></mat-checkbox>
-              </div>
-              <div class='col-12'>
-                <div class='row m-0 mt-4 mb-2'>
+                <div class='row m-0 mt-2 mb-2'>
                   <mat-form-field class='w-100'>
                     <mat-label>Questions</mat-label>
                     <input matInput autocomplete='no' type='text' required>
@@ -187,11 +177,7 @@
                 </div>
               </div>
               <div class='col-12'>
-                <mat-checkbox class='example-margin mt-2' [(ngModel)]='showIcon' color='primary'><h4
-                  class='text-muted m-0  ml-2'>Icons</h4></mat-checkbox>
-              </div>
-              <div class='col-12'>
-                <div class='row mt-4 mb-2'>
+                <div class='row mt-2 mb-2'>
                   <div class='col-3'><p class='text-muted'>POINTS</p></div>
                   <div class='col-9'><p class='text-muted'>ANSWERS</p></div>
                 </div>
@@ -207,20 +193,11 @@
 
                     <mat-form-field class='w-100'>
                       <mat-label>Answer 1</mat-label>
-                      <input matInput autocomplete='no' type='text'>
+                      <input matInput autocomplete='no' placeholder='Yes' type='text'>
                     </mat-form-field>
                   </div>
                 </div>
-                <div class='row  mb-2'>
-                  <div class='offset-3'>
-                  </div>
-                  <div class='col-9' *ngIf='showIcon'>
-                    <mat-form-field class='w-100'>
-                      <mat-label>Font Awesome Icon 6 Code</mat-label>
-                      <input matInput autocomplete='no' type='text'>
-                    </mat-form-field>
-                  </div>
-                </div>
+
               </div>
             </div>
             <div class='col-12'>
